Some swager settings
